Address an issue where IE 11 cannot recognize "text-align: initial"

--- a/src/index.styl
+++ b/src/index.styl
@@ -28,7 +28,7 @@
         .modal-content {
             display: inline-block;
             vertical-align: middle;
-            text-align: initial;
+            text-align: left;
         }
     }
 }
